Fix for background color not being set on the widget for plugins bug 83159 r=av sr=attinasi